# docgen

./: .gitignore  README.md  env  pyproject.toml  requirements.txt  run_sample.ps1  server.py
docgen/: __init__.py  __main__.py  cli.py  docx_builder.py  docx_merge.py  llm.py  models.py  word_utils.py  yaml_config.py  zip_bundle.py
example/: report.yaml
tools/: build_example.py
