[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docgen"
version = "0.1.0"
description = "LLM-assisted Word document generation from ZIP assets and YAML structure"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "PyYAML>=6.0",
    "pandas>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pillow>=10.0"]

[project.scripts]
docgen = "docgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docgen*"]
